// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/admin_console/permission_schemes_settings/permission_row should match snapshot on editable and inherited 1`] = `
<div
  className="permission-row"
  id="uniqId"
  onClick={[Function]}
>
  <PermissionCheckbox
    id="uniqId-checkbox"
    value="checked"
  />
  <span
    className="permission-name"
  >
    id
  </span>
  <PermissionDescription
    additionalValues={Object {}}
    description=""
    id="id"
    inherited={
      Object {
        "name": "test",
      }
    }
    selectRow={[MockFunction]}
  />
</div>
`;

exports[`components/admin_console/permission_schemes_settings/permission_row should match snapshot on editable and not inherited 1`] = `
<div
  className="permission-row"
  id="uniqId"
  onClick={[Function]}
>
  <PermissionCheckbox
    id="uniqId-checkbox"
    value="checked"
  />
  <span
    className="permission-name"
  >
    id
  </span>
  <PermissionDescription
    additionalValues={Object {}}
    description=""
    id="id"
    selectRow={[MockFunction]}
  />
</div>
`;

exports[`components/admin_console/permission_schemes_settings/permission_row should match snapshot on read only and not inherited 1`] = `
<div
  className="permission-row read-only"
  id="uniqId"
  onClick={[Function]}
>
  <PermissionCheckbox
    id="uniqId-checkbox"
    value="checked"
  />
  <span
    className="permission-name"
  >
    id
  </span>
  <PermissionDescription
    additionalValues={Object {}}
    description=""
    id="id"
    selectRow={[MockFunction]}
  />
</div>
`;

exports[`components/admin_console/permission_schemes_settings/permission_row should match snapshot on read only and not inherited 2`] = `
<div
  className="permission-row read-only"
  id="uniqId"
  onClick={[Function]}
>
  <PermissionCheckbox
    id="uniqId-checkbox"
    value="checked"
  />
  <span
    className="permission-name"
  >
    id
  </span>
  <PermissionDescription
    additionalValues={Object {}}
    description=""
    id="id"
    selectRow={[MockFunction]}
  />
</div>
`;

exports[`components/admin_console/permission_schemes_settings/permission_row should match snapshot with additional values 1`] = `
<div
  className="permission-row"
  id="uniqId"
  onClick={[Function]}
>
  <PermissionCheckbox
    id="uniqId-checkbox"
    value="checked"
  />
  <span
    className="permission-name"
  >
    id
  </span>
  <PermissionDescription
    additionalValues={
      Object {
        "edit_post": Object {
          "editTimeLimitButton": <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="default"
            disabled={false}
            onClick={[MockFunction]}
          />,
        },
      }
    }
    description=""
    id="id"
    selectRow={[MockFunction]}
  />
</div>
`;
